/*
 * Copyright 2023 Matrix Origin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package plugin;
option go_package = "github.com/matrixorigin/matrixone/pkg/pb/plugin";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "metadata.proto";

option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.sizer_all) = false;
option (gogoproto.protosizer_all) = true;

message Request {
  uint64 requestID = 1;
  ClientInfo clientInfo = 2;
}

message ClientInfo {
  string              tenant        = 1;
  string              username      = 2;
  string              originIP      = 3;
  map<string, string> labelSelector = 4;
}

message Response {
  uint64             requestID = 1;
  Recommendation     recommendation = 2;
}

enum Action {
  Select = 0;
  Reject = 1;
  Bypass = 2;
}

message Recommendation {
  Action             action    = 1;
  metadata.CNService CN        = 2;
  string             message   = 3;
  bool               updated   = 4;
}
